# solar_adoption

./: .gitignore  .python-version  01_data_preparation.ipynb  02_EDA.ipynb  03_modeling.ipynb  README.md  RESULTS.md  pyproject.toml  requirements.txt
model_results/: model_coefficients.csv  model_summary.csv
modeling_data/: merged_solar_dataset.csv
